--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ PyDispatcher==2.0.7
 pyOpenSSL==23.1.1
 python-dateutil==2.8.2
 pytz==2023.3.post1
+PyYAML==6.0.1
 queuelib==1.6.2
 requests==2.29.0
 requests-file==1.5.1
