--- a/generic_shopify_scraper/config.yaml
+++ b/generic_shopify_scraper/config.yaml
@@ -1,3 +1,4 @@
+# This config file is where the generic shopify scraper gets the parameters
 dynaquest:
   site_url: "https://dynaquestpc.com"
   supplier: 'Dynaquest'
@@ -11,3 +12,10 @@ easypc:
   handles:
     GPU: "graphic-card"
   filename_prefix: "easypc"
+
+pcx:
+  site_url: "https://pcx.com.ph/"
+  supplier: 'PC Express'
+  handles:
+    GPU: "graphics-cards"
+  filename_prefix: "pcx"
