--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ attrs==23.1.0
 Automat==22.10.0
 beautifulsoup4==4.9.3
 black==23.7.0
+blinker==1.6.2
 bs4==0.0.1
 certifi==2022.12.7
 cffi==1.15.1
@@ -17,18 +18,23 @@ EasyProcess==0.3
 exceptiongroup==1.1.2
 filelock==3.12.0
 flake8==3.8.4
+flask==2.3.3
 fuzzywuzzy==0.18.0
 greenlet==2.0.2
 h11==0.14.0
 hyperlink==21.0.0
 idna==3.4
+importlib-metadata==6.8.0
 incremental==22.10.0
 isort==5.12.0
 itemadapter==0.8.0
 itemloaders==1.1.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
 jmespath==1.0.1
 loguru==0.5.3
 lxml==4.9.2
+MarkupSafe==2.1.3
 mccabe==0.6.1
 mypy-extensions==1.0.0
 mysqlclient==2.2.0
@@ -82,6 +88,8 @@ undetected-chromedriver==3.5.0
 urllib3==1.26.15
 w3lib==2.1.1
 websockets==11.0.3
+werkzeug==2.3.7
 win32-setctime==1.0.3
 wsproto==1.2.0
+zipp==3.17.0
 zope.interface==6.0
