--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ greenlet==2.0.2
 h11==0.14.0
 hyperlink==21.0.0
 idna==3.4
+importlib==1.0.4
 importlib-metadata==6.8.0
 incremental==22.10.0
 isort==5.12.0
@@ -66,8 +67,9 @@ queuelib==1.6.2
 regex==2020.11.13
 requests==2.29.0
 requests-file==1.5.1
-Scrapy==2.8.0
+Scrapy==2.11.0
 scrapy-playwright==0.0.32
+scrapyrt==0.15.0
 selenium==4.9.1
 service-identity==21.1.0
 ShopifyScraper==0.2
