--- a/config/api_scraper.yaml
+++ b/config/api_scraper.yaml
@@ -1,3 +1,5 @@
+# Sample url: https://www.pcworth.com/product/search/?limit=48&category=21&id=+
+# API URL: ttps://www.api.pcworth.com/api/ecomm/products/available/get?limit=999&category=21
 pcworth:
   GPU: "21"
   CPU: "16"
