--- a/config/api_scraper.yaml
+++ b/config/api_scraper.yaml
@@ -3,5 +3,13 @@
 pcworth:
   GPU: "21"
   CPU: "16"
+  MOBO: "17"
+  RAM: "13"
+  SSD: "14"
+  HDD: "15"
+  PSU: "18"
+  CASE: "20"
+  # TODO: Do a looping in COOLER category there are cpu coolers and fan
+  COOLER: "26"
   filename_prefix: "pcworth"
   id_prefix: "PCWT"
