--- a/config/shopify_scraper.yaml
+++ b/config/shopify_scraper.yaml
@@ -2,7 +2,7 @@
 # This config file is where the generic shopify scraper gets the parameters
 dynaquest:
   site_url: "https://dynaquestpc.com"
-  supplier: 'Dynaquest'
+  vendor: 'Dynaquest'
   slug:
     GPU: "graphics-card"
     CPU: "processor"
@@ -19,7 +19,7 @@ dynaquest:
 
 easypc:
   site_url: "https://easypc.com.ph"
-  supplier: 'EasyPC'
+  vendor: 'EasyPC'
   slug:
     CPU: "processor"
     GPU: "graphic-card"
@@ -36,7 +36,7 @@ easypc:
 
 pcx:
   site_url: "https://pcx.com.ph"
-  supplier: 'PC Express'
+  vendor: 'PC Express'
   slug:
     CPU: "processors"
     GPU: "graphics-cards"
@@ -53,7 +53,7 @@ pcx:
 
 datablitz:
   site_url: "https://ecommerce.datablitz.com.ph"
-  supplier: 'Datablitz'
+  vendor: 'Datablitz'
   # TODO: Optimize
   slug:
     CPU: "pc-mac"
