--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 amqp==5.2.0
+async-timeout==4.0.3
 attrs==23.1.0
 Automat==22.10.0
 backports.zoneinfo==0.2.1
@@ -50,6 +51,7 @@ python-dotenv==1.0.0
 pytz==2023.3.post1
 PyYAML==6.0.1
 queuelib==1.6.2
+redis==5.0.1
 requests==2.31.0
 requests-file==1.5.1
 Scrapy==2.11.0
