--- a/scrapers/scrapy_scraper/config/scrapy_scraper.yaml
+++ b/scrapers/scrapy_scraper/config/scrapy_scraper.yaml
@@ -22,6 +22,7 @@ shopee:
     total_page: 'span.shopee-mini-page-controller__total::text'
     get_hrefs: 'li.shopee-search-item-result__item'
     product:
+      main: 'div[role="main"]'
       name: 'div._44qnta span::text'
       price: 'div.pqTWkA::text'
       brand: 'a.GvvZVe::text'
