--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,17 @@
+aiohttp==3.8.6
+aiosignal==1.3.1
 amqp==5.2.0
 async-timeout==4.0.3
 attrs==23.1.0
 Automat==22.10.0
+awscli==1.29.83
 backports.zoneinfo==0.2.1
+beautifulsoup4==4.12.2
 billiard==4.2.0
 blinker==1.7.0
+boto3==1.28.83
+botocore==1.31.83
+cachetools==5.3.2
 celery==5.3.4
 certifi==2023.7.22
 cffi==1.16.0
@@ -13,9 +20,12 @@ click==8.1.7
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.3.0
+colorama==0.4.4
 constantly==23.10.4
 cryptography==41.0.5
 cssselect==1.2.0
+docker==6.1.3
+docutils==0.16
 filelock==3.13.1
 flask==3.0.0
 greenlet==3.0.0
@@ -48,10 +58,14 @@ pyee==11.0.1
 pyOpenSSL==23.3.0
 python-dateutil==2.8.2
 python-dotenv==1.0.0
+python-redis-lock==4.0.0
 pytz==2023.3.post1
 PyYAML==6.0.1
 queuelib==1.6.2
 redis==5.0.1
+redis-cache==0.1.5
+redis-structures==0.1.7
+redlock==1.2.0
 requests==2.31.0
 requests-file==1.5.1
 Scrapy==2.11.0
