update env sample

--- a/.env.sample
+++ b/.env.sample
@@ -2,3 +2,8 @@ DB_HOST=db-host.mysql.com
 DB_USERNAME='username'
 DB_PASSWORD='password'
 DB_NAME='db-name'
+
+
+REDIS_URL=redis://localhost:6379/0
+SCRAPY_SCRAPER=http://localhost:9080/
+GOOGLE_API_KEY=Palm 2 API KEy
